[package]
name = "PlaygroundSite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
derive_more = "0.99.17"
serde = {version = "1.0.136", features = ["derive", "rc"]}
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features =["full"]}
validator = "0.14.0"
validator_derive = "0.14.0"
